# sem2_hw6

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  polynomial.cpp  polynomial.h
testing/: CMakeLists.txt  testing.cc
